--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:name=".MarketEdit"
             android:label="@string/title_activity_market_edit" >
         </activity>
+        <activity
+            android:name=".RegisterUser"
+            android:label="@string/title_activity_register_user" >
+        </activity>
     </application>
 
 </manifest>
