--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 17
+    compileSdkVersion 16
     buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "de.jochen_manns.buyitv0"
-        minSdkVersion 17
+        minSdkVersion 16
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
@@ -21,5 +21,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:support-v4:+"
+    compile 'com.android.support:support-v4:+'
 }
