--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-sdk android:targetSdkVersion="16" android:minSdkVersion="16" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -30,10 +32,6 @@
         <activity
             android:name=".MarketEdit"
             android:label="@string/title_activity_market_edit" >
-        </activity>
-        <activity
-            android:name=".RegisterUser"
-            android:label="@string/title_activity_register_user" >
         </activity>
     </application>
 
