--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,38 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.jochen_manns.buyitv0" >
+    package="de.jochen_manns.buyitv0">
 
+    <!-- Wir müssen den Web Service aufrufen können - eine feiner Einschränkung gibt es im Moment leid3er nicht -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <uses-sdk android:targetSdkVersion="16" android:minSdkVersion="16" />
+    <!-- Etwas konservativ soll die App unter 4.1.2 laufen -->
+    <uses-sdk
+        android:minSdkVersion="16"
+        android:targetSdkVersion="16" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
+
+        <!-- Der einzige externe Einstiegspunkt -->
         <activity
             android:name=".ProductList"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ProductEdit"
-            android:label="@string/title_activity_product_edit" >
-        </activity>
-        <activity
-            android:name=".MarketList"
-            android:label="@string/title_activity_market_list" >
-        </activity>
-        <activity
-            android:name=".MarketEdit"
-            android:label="@string/title_activity_market_edit" >
-        </activity>
+
+        <!-- Die interne Struktur der Anwendung, die Titel werden dynamisch je nach Aufrufkontext gesetzt -->
+        <activity android:name=".ProductEdit" />
+        <activity android:name=".MarketList" />
+        <activity android:name=".MarketEdit" />
     </application>
 
 </manifest>
