--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.jochen_manns.buyitv0">
 
-    <!-- Wir müssen den Web Service aufrufen können - eine feiner Einschränkung gibt es im Moment leid3er nicht -->
+    <!-- Wir müssen den Web Service aufrufen können - eine feiner Einschränkung gibt es im Moment leider nicht -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
