--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
     <!-- Wir müssen den Web Service aufrufen können - eine feiner Einschränkung gibt es im Moment leider nicht -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -11,18 +10,19 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
+        <activity
+            android:name=".CategoryList"
+            android:exported="false" />
         <!-- Der einzige externe Einstiegspunkt -->
         <activity
             android:name=".ProductList"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Die interne Struktur der Anwendung, die Titel werden dynamisch je nach Aufrufkontext gesetzt -->
+        </activity> <!-- Die interne Struktur der Anwendung, die Titel werden dynamisch je nach Aufrufkontext gesetzt -->
         <activity android:name=".ProductEdit" />
         <activity android:name=".MarketList" />
         <activity android:name=".MarketEdit" />
